--- a/magic.css
+++ b/magic.css
@@ -133,16 +133,16 @@ ul {
   appearance: none;
   background-color: #000000;
   border: 2px solid #1A1A1A;
-  border-radius: 15px;
+  border-radius: 0px;
   box-sizing: border-box;
   color: #FFFFFF;
   cursor: pointer;
   display: inline-block;
-  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 600;
   line-height: normal;
-  margin: 1rem;
+  margin-left: 50%;
+  margin-right: 50%;
   min-height: 60px;
   min-width: 0;
   outline: none;
