--- a/magic.css
+++ b/magic.css
@@ -138,6 +138,7 @@ ul {
   color: #FFFFFF;
   cursor: pointer;
   display: inline-block;
+  font-family: "Cinzel", serif;
   font-size: 1rem;
   font-weight: 600;
   line-height: normal;
