--- a/magic.css
+++ b/magic.css
@@ -144,6 +144,8 @@ ul {
   line-height: normal;
   margin-left: 50%;
   margin-right: 50%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   min-height: 60px;
   min-width: 0;
   outline: none;
