--- a/magic.css
+++ b/magic.css
@@ -142,7 +142,7 @@ ul {
   font-size: 1rem;
   font-weight: 600;
   line-height: normal;
-  margin-left: 50%;
+  margin-left: 48%;
   margin-right: 50%;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -262,4 +262,6 @@ footer a:hover {
 .image-text-container {
   flex-direction: column;
 }
+.viewGallery {
+  margin-left: 25%;
 }
